AUTOMAKE_OPTIONS = foreign subdir-objects
DISTCLEANFILES = *~

bin_PROGRAMS=client-proxy wrap

# TODO: Rename to make it clear this is for the client.
client_proxy_SOURCES=\
src/client-proxy.c\
src/common.c

# TODO: Rename to make it clear this is the server.
wrap_SOURCES=\
src/wrap.c\
src/common.c
